syntax="proto3";

package ai.nworx.api.proto.dashboard;
import "common/common.proto";
option java_multiple_files = true;

message FetchDashboardRequest{
	string userId = 1;
}


message FetchDashboardHULRequest{
	string userId = 1;
	string role = 2;
}


service FetchDashboardService{
	rpc fetchDashboardByUserId(FetchDashboardRequest) returns (ai.nworx.api.proto.common.ResponseProto);
	rpc fetchHulDashboard(FetchDashboardHULRequest) returns (ai.nworx.api.proto.common.ResponseProto);
	rpc fetchDashboardV2ByUserId(FetchDashboardRequest) returns (ai.nworx.api.proto.common.ResponseProto);
}
